--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,10 +17,12 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-is": "^19.2.4",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.2.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
