--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "cropperjs": "^1.6.2",
     "emoji-picker-react": "^4.13.3",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
+    "react-cropper": "^2.3.3",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-is": "^19.2.4",
